Changes in language section with ILR scale

--- a/long_cv/long_cv.tex
+++ b/long_cv/long_cv.tex
@@ -213,10 +213,10 @@ I am currently a PhD student at the University of Alicante focused on deep learn
 
 \section*{Languages}
 \begin{tabular}{L!{\VRule}R}
-{\bf English}&{\bf Fluent (B2+)}\\
-{\bf French}&{\bf Basic User (A2)}\\
-{\bf Romanian}&{\bf Native}\\
-{\bf Spanish}&{\bf Native}\\
+{\bf English}&{\bf Limited working proficiency (B2+)}\\
+{\bf French}&{\bf Elementary proficiency (A2)}\\
+{\bf Romanian}&{\bf Native proficiency}\\
+{\bf Spanish}&{\bf Native proficiency}\\
 \end{tabular}
 
 \section*{Reference List}
