Typos on the long CV version

--- a/long_cv/long_cv.tex
+++ b/long_cv/long_cv.tex
@@ -12,6 +12,7 @@
 \newcolumntype{L}{>{\raggedleft}p{0.14\textwidth}}
 \newcolumntype{R}{p{0.8\textwidth}}
 \newcommand\VRule{\color{lightgray}\vrule width 0.5pt}
+\usepackage{xcolor}
  
 \begin{document}
 \begin{center}
@@ -40,7 +41,7 @@ E-mail: \href{mailto:soprea@dtic.ua.es}{soprea@dtic.ua.es}\\
  
 \section*{About Me}
 
-I am currently a PhD student at the University of Alicante focused on deep learning-based video prediction. My research interests span topics mainly in Computer Vision, Virtual/Augmented Reality and Deep Learning. I am also interested in GPU programming, 3D computer graphics and AI.
+I am currently a PhD student at the University of Alicante focused on deep learning-based video prediction. My research interests span topics mainly in Computer Vision, Virtual/Augmented Reality and Deep Learning. I am also interested in GPGPU programming, 3D computer graphics and AI.
 
 
 \section*{Work/Research Experience}
@@ -48,7 +49,7 @@ I am currently a PhD student at the University of Alicante focused on deep learn
 
 2018 & {\bf Research Engineer} \\
 (6 months) & \textbf{Department of Computer Technology, University of Alicante}\\
-& Worked on synthetic and photorealistic data generation with robot trajectories and object interaction. Focused on the implementation of a grasping system and robot's movement.  \\
+& Worked on synthetic and photorealistic data generation with robot trajectories and object interaction. Focused on the implementation of a grasping system and robot mobility.  \\
 \\
 	
 2017 & {\bf Research Engineer} \\
@@ -113,7 +114,7 @@ I am currently a PhD student at the University of Alicante focused on deep learn
 
 	
 2017 & \textbf{Research Initiation Grant}\\
-& Research initiation grant (January, 2017 -- June, 2017) at the Department of Computer Technology (University of Alicante), co-funded by the \textit{Industrial Informatics and Computer Networks (I2RC)} research group and the \textit{Vice Rectorate for Research and Knowledge Transfer}.\\
+& Research initiation grant (January, 2017 -- June, 2017) at the Department of Computer Technology (University of Alicante), co-funded by the \textit{Industrial Informatics and Computer Networks (I2RC)} research group and the \textit{Vice-Rectorate for Research and Knowledge Transfer}.\\
 \\
 
 2014 & \textbf{Research Collaboration Grant}\\
